--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,29 @@
+# Node.js dependencies
 node_modules/
-dist/
-build/
-.env
-.env.local
-.DS_Store
-.vscode/
+
+# Logs
+logs/
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-package-lock.json
-/.idea/
-coverage/
-/.history/
+
+# OS-specific files
+.DS_Store
+Thumbs.db
+
+# Environment variables
+.env
+
+# IDE-specific files
+.vscode/
+.idea/
+*.iml
+
+# Build output
+dist/
+build/
+
+# Temporary files
+*.tmp
+*.temp
